Finished the design for the menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="bookMenu.css">
+    <link rel="stylesheet" href="books.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,17 +29,17 @@
             <form>
                 <div>
                     <label for="bookTitle">Book Title</label>
-                    <input type="text" id="bookTitle" name="newBookTitle">
+                    <input type="text" id="bookTitle" name="newBookTitle" placeholder="A pretty cool book">
                 </div>
 
                 <div>
                     <label for="bookAuthor">Author</label>
-                    <input type="text" id="bookAuthor" name="newBookAuthor">
+                    <input type="text" id="bookAuthor" name="newBookAuthor" placeholder="Someone Important">
                 </div>
 
                 <div>
                     <label for="bookPages">Number of pages</label>
-                    <input type="number" id="bookPages" name="newBookPages" min="0" max="999">
+                    <input type="number" id="bookPages" name="newBookPages" min="0" max="999" placeholder="300">
                 </div>                
                 
                 <div>
