the basic functionality and design is finished, aldo i would like to add an option to edit an already existing book

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             </form>
         </div>
     </div>
-    <div class="bookContent" id="containerBooks"></div>
+    <div class="bookContent" id="containerBooks">
+    </div>
 
 </body>
 </html>
