--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="bookMenu.css">
     <link rel="stylesheet" href="books.css">
-    <link rel="icon" href="IMG/icon.png.">
+    <link rel="icon" href="IMG/icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
